--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ apidata.py
 # downloaded solar data from pvdaq
 pvdata/
 
+# downloaded weather data
+weatherdata/
+
 # downloaded data to try out data processing 
 *.csv
 *.joblib
