implement feature accessor for pandas dataframes df df.ftr can hold constants (from metadata or calculations) and has several methods for operating with features. catalog of features and calcuation of new features are centralized. make a common module for requesting data from PVDAQ or NSRDB.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -19,6 +19,10 @@ RUN groupadd -g ${NB_GID} ${NB_USER} || true && \
 
 USER ${NB_USER}
 
-RUN pip install --no-cache-dir s3fs tqdm timezonefinder scikit-learn matplotlib requests pandas pvlib pytz
+RUN pip install --no-cache-dir \
+    scikit-learn matplotlib pandas pvlib \
+    requests fsspec s3fs \
+    timezonefinder pytz \
+    tqdm
 
 USER root
