Build machine learning pipeline Implement three ML models Train models on all system ids with good data at once Modularize loading and concating csv/parquet files, load parquet files fast with pyarrow using multithreading. Implement more derived features with non-linear impact on models

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -23,6 +23,9 @@ RUN pip install --no-cache-dir \
     scikit-learn matplotlib pandas pvlib \
     requests fsspec s3fs \
     timezonefinder pytz \
-    tqdm
+    tqdm \
+    pyarrow \
+    natsort \
+    xgboost lightgbm
 
 USER root
