--- a/requirements.in
+++ b/requirements.in
@@ -1,13 +1,13 @@
 Django==5.2.8
+envvars==0.3.0
 joblib==1.5.2
 lightgbm==4.6.0
 matplotlib==3.8.2
 natsort==8.4.0
-numpy==1.26.4
 pandas==2.3.3
+numpy==1.26.4
 pvlib==0.13.1
 pyarrow==22.0.0
-python-dotenv==1.2.1
 pytz==2025.2
 Requests==2.32.5
 s3fs==2025.10.0
