--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,8 @@ cycler==0.12.1
     # via matplotlib
 django==5.2.8
     # via -r requirements.in
+envvars==0.3.0
+    # via -r requirements.in
 flatbuffers==25.9.23
     # via timezonefinder
 fonttools==4.61.0
@@ -114,8 +116,6 @@ python-dateutil==2.9.0.post0
     #   botocore
     #   matplotlib
     #   pandas
-python-dotenv==1.2.1
-    # via -r requirements.in
 pytz==2025.2
     # via
     #   -r requirements.in
