--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ license = {file = "LICENSE"}
 
 keywords = ["Photivoltaic Energy", "Machine Learning", "Django", "Solar Power", "Energy forecast"]
 dependencies = [
+    'jinja2==3.1.6',
     'aiobotocore==2.26.0', 'aiohappyeyeballs==2.6.1', 'aiohttp==3.13.2', 'aioitertools==0.13.0', 'aiosignal==1.4.0',
     'asgiref==3.11.0', 'attrs==25.4.0', 'botocore==1.41.5', 'certifi==2025.11.12', 'cffi==2.0.0', 'charset-normalizer==3.4.4',
     'contourpy==1.3.3', 'cycler==0.12.1', 'django==5.2.8', 'envvars==0.3.0', 'flatbuffers==25.9.23', 'fonttools==4.61.0', 'frozenlist==1.8.0',
